terraform-week5-grafana/1-rds/module/2-vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.vpc_cidr
  enable_dns_hostnames = true
  tags = {
    Name = "${var.week_prefix}-vpc"
  }
}
